# sp-sub-audio

./: .dockerignore  .env.test  .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_main.py
.github/workflows/: build.yml  ci.yml
src/: config.py  depends.py  main.py  model.py  task.py
